--- a/deploy/spark-operator/Makefile
+++ b/deploy/spark-operator/Makefile
@@ -5,6 +5,9 @@ repo:
 install:
 	helm install spark-operator spark-operator/spark-operator --namespace=spark-operator --create-namespace --values=values.yaml --version=1.1.27 --wait
 
+upgrade:
+	helm upgrade spark-operator spark-operator/spark-operator --namespace=spark-operator --values=values.yaml --version=1.1.27 --wait
+
 roles:
 	kubectl delete serviceaccount spark -n spark-operator
 	kubectl delete clusterrolebinding spark-role -n spark-operator
